--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <section id="weather">
         <h1>Weather</h1>
         <ul>
-
+            <h2>Los Angeles</h2>
+            <h2>New York</h2>
         </ul>
     </section>
     <script src="js/index.js"></script>
